--- a/pages/productos.html
+++ b/pages/productos.html
@@ -7,45 +7,47 @@
     <title>Nuestros Productos - SoniTech Colombia</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
 
-    <!-- Encabezado de la página -->
 
     <!-- Encabezado de la página -->
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary nav">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="../"><img src="../icons/download.svg" alt="SoniTech Colombia"
-                        class="logo"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" href="../index.html#Nosotros">Nosotros</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="../pages/empleos.html">Empleos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="../pages/productos.html">Productos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="../pages/equipo.html">Equipo</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="../pages/testimonios.html">Testimonios</a>
-                          </li>
-                    </ul>
-                </div>
+          <div class="container-fluid">
+            <a class="navbar-brand" href="../"><img src="../icons/download.svg" alt="SoniTech Colombia" class="logo"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+              aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link" href="../index.html#Nosotros">Nosotros <i class="bi bi-people-fill"></i></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../pages/empleos.html">Empleos <i class="bi bi-briefcase-fill"></i></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../pages/productos.html">Productos <i class="bi bi-boxes"></i></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../pages/equipo.html">Equipo <i class="bi bi-share-fill"></i></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../pages/testimonios.html">Testimonios <i class="bi bi-megaphone-fill"></i></a>
+                </li>
+              </ul>
             </div>
+
+            
+
+          </div>
         </nav>
-    </header>
+      </header>
 
     <main class="container mt-2">
         <section class="card">
@@ -135,7 +137,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous"></script>
-</body>
+
 </body>
 
 </html>
