Se agrega uso de animaciones AOS - Animate

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
   
 </head>
 
@@ -25,19 +27,19 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="#Nosotros">Nosotros <i class="bi bi-people-fill"></i></a>
+              <a data-aos="zoom-in-left" class="nav-link" href="#Nosotros">Nosotros <i class="bi bi-people-fill"></i></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="pages/empleos.html">Empleos <i class="bi bi-briefcase-fill"></i></a>
+              <a data-aos="zoom-in-left" class="nav-link" href="pages/empleos.html">Empleos <i class="bi bi-briefcase-fill"></i></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="pages/productos.html">Productos <i class="bi bi-boxes"></i></a>
+              <a data-aos="zoom-in-left" class="nav-link" href="pages/productos.html">Productos <i class="bi bi-boxes"></i></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="pages/equipo.html">Equipo <i class="bi bi-share-fill"></i></a>
+              <a data-aos="zoom-in-left" class="nav-link" href="pages/equipo.html">Equipo <i class="bi bi-share-fill"></i></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="pages/testimonios.html">Testimonios <i class="bi bi-megaphone-fill"></i></a>
+              <a data-aos="zoom-in-left" class="nav-link" href="pages/testimonios.html">Testimonios <i class="bi bi-megaphone-fill"></i></a>
             </li>
           </ul>
         </div>
@@ -46,17 +48,17 @@
   </header>
 
   <main class="container  card mt-2">
-    <div class="bg-body-tertiary p-5 rounded mt-2 main__img">
+    <div  data-aos="fade-up" class="bg-body-tertiary p-5 rounded mt-2 main__img">
 
     </div>
 
-    <section class="main__text">
+    <section data-aos="zoom-in" class="main__text">
       <!-- Sección con texto principal -->
       <h1 class="main__h1">
         SoniTech Colombia <i class="bi bi-c-circle"></i> Innovación Musical en el Corazón de América Latina
       </h1>
       <!-- Párrafo introductorio -->
-      <p class="main__p" id="Nosotros">
+      <p class="main__p " id="Nosotros">
         SoniTech Colombia es una destacada empresa colombiana especializada en software musical, dedicada a la creación,
         producción y distribución de un programa de producción e interpretación musical líder en la industria. Con sede
         en Bogotá y un equipo altamente talentoso de ingenieros de software y músicos apasionados, SoniTech Colombia se
@@ -73,7 +75,7 @@
 
     </section>
 
-    <section>
+    <section data-aos="zoom-in-left">
       <h2 class="main__h2">Conoce a Nuestro Equipo Apasionado de Expertos Musicales y Tecnológicos</h2>
       <p class="main__p">
         En SoniTech Colombia, nuestro éxito está impulsado por un equipo diverso y apasionado que combina su amor por la
@@ -143,6 +145,10 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
 </body>
 
 </html>
