--- a/pages/empleos.html
+++ b/pages/empleos.html
@@ -9,6 +9,7 @@
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../css/main.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -50,7 +51,7 @@
     <main class="container mt-5">
         
 
-        <div class="card">
+        <div data-aos="zoom-in" class="card">
             <div class="card-body">
                 <h1 class="card-title">Oportunidades de Empleo en SoniTech Colombia</h1>
                 <p class="card-text">Únete a nuestro equipo apasionado de músicos y tecnólogos comprometidos en llevar
@@ -128,5 +129,10 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
 integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
 crossorigin="anonymous"></script>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+<script>
+  AOS.init();
+</script> 
 </body>
 </html>
