--- a/pages/equipo.html
+++ b/pages/equipo.html
@@ -9,6 +9,7 @@
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <link rel="stylesheet" href="../css/main.css">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -17,7 +18,7 @@
   <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary nav">
       <div class="container-fluid">
-        <a class="navbar-brand" href="../"><img src="../icons/download.svg" alt="SoniTech Colombia" class="logo"></a>
+        <a data-aos="zoom-in-left" class="navbar-brand" href="../"><img src="../icons/download.svg" alt="SoniTech Colombia" class="logo"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -25,19 +26,19 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="../index.html#Nosotros">Nosotros <i class="bi bi-people-fill"></i></a>
+              <a data-aos="zoom-in-left" class="nav-link" href="../index.html#Nosotros">Nosotros <i class="bi bi-people-fill"></i></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../pages/empleos.html">Empleos <i class="bi bi-briefcase-fill"></i></a>
+              <a data-aos="zoom-in-left" class="nav-link" href="../pages/empleos.html">Empleos <i class="bi bi-briefcase-fill"></i></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../pages/productos.html">Productos <i class="bi bi-boxes"></i></a>
+              <a data-aos="zoom-in-left" class="nav-link" href="../pages/productos.html">Productos <i class="bi bi-boxes"></i></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../pages/equipo.html">Equipo <i class="bi bi-share-fill"></i></a>
+              <a data-aos="zoom-in-left" class="nav-link" href="../pages/equipo.html">Equipo <i class="bi bi-share-fill"></i></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../pages/testimonios.html">Testimonios <i class="bi bi-megaphone-fill"></i></a>
+              <a data-aos="zoom-in-left" class="nav-link" href="../pages/testimonios.html">Testimonios <i class="bi bi-megaphone-fill"></i></a>
             </li>
           </ul>
         </div>
@@ -50,10 +51,10 @@
 
 
 
-    <div class="card">
+    <div data-aos="zoom-in" class="card">
       <h1 class="card-title m-2">Conoce nuestro equipo</h1>
     </div>
-    <div class="card">
+    <div data-aos="zoom-in" class="card">
       <div class="row no-gutters">
         <div class="col-md-4">
           <img src="../img/equipo/direcora_ejecutiva.jpg" class="card-img" alt="Directora Ejecutiva"
@@ -76,7 +77,7 @@
 
 
 
-    <div class="card">
+    <div data-aos="zoom-in" class="card">
       <div class="row no-gutters">
         <div class="col-md-4">
           <img src="../img/equipo/ing_software.jpg" class="card-img" alt="Ingeniero Jefe de Software"
@@ -99,7 +100,7 @@
 
 
 
-    <div class="card">
+    <div data-aos="zoom-in" class="card">
       <div class="row no-gutters">
         <div class="col-md-4">
           <img src="../img/equipo/ux.jpg" class="card-img" alt="specialista en Experiencia del Usuario (UI/UX)"
@@ -124,7 +125,7 @@
 
 
 
-    <div class="card">
+    <div data-aos="zoom-in" class="card">
       <div class="row no-gutters">
         <div class="col-md-4">
           <img src="../img/equipo/musico.jpg" class="card-img" alt="Músico y Asesor de Producto" style="width: 100%;">
@@ -145,7 +146,7 @@
     </div>
 
 
-    <div class="card">
+    <div data-aos="zoom-in" class="card">
       <div class="row no-gutters">
         <div class="col-md-4">
           <img src="../img/equipo/sporte.jpg" class="card-img" alt="Soporte Técnico y Comunidad" style="width: 100%;">
@@ -220,6 +221,11 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+    <script>
+      AOS.init();
+    </script> 
 
 </body>
 
