correccion en el logo y vista de desde dispositivos mobiles

--- a/pages/testimonios.html
+++ b/pages/testimonios.html
@@ -15,7 +15,9 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary nav">
           <div class="container-fluid">
-            <a class="navbar-brand" href="../"><img src="../icons/download.svg" alt="SoniTech Colombia" class="logo"></a>
+            <div class="logo">
+              <a class="navbar-brand" href="./"></a>
+            </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
               aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -42,11 +44,9 @@
           </div>
         </nav>
       </header>
-
     <main class="container mt-2">
         <section class="card">
-            <h1 class="card-header">Opiniones de Nuestros Usuarios</h1>
-            
+            <h1 class="card-header">Opiniones de Nuestros Usuarios</h1>            
             <div class="card m-2">
                 <p class="card-text m-1">Harmonia Pro ha cambiado completamente la forma en que abordo la producción musical. ¡Es como si mi estudio estuviera en todas partes!</p>
                 <b class="card-title m-1">Carlos G., Productor Musical</b>
@@ -61,32 +61,24 @@
             </div>
         </section>
     </main>
-
  <!-- Footer -->
  <footer class=" text-center ">
   <!-- Grid container -->
   <div class="container p-4">
-
     <!-- Section: Social media -->
     <section class="mb-4">
       <!-- Facebook -->
       <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998" href="https://www.facebook.com/jcarreazo?mibextid=LQQJ4d " role="button"><i class="bi bi-facebook"></i></a>
-
       <!-- Twitter -->
       <a class="btn btn-primary btn-floating m-1" style="background-color: #55acee" href="https://twitter.com/JCA024" role="button"><i class="bi bi-twitter"></i></a>
-
       <!-- Instagram -->
       <a class="btn btn-primary btn-floating m-1" style="background-color: #ac2bac" href="#!" role="button"><i class="bi bi-instagram"></i></a>
-
       <!-- Linkedin -->
       <a class="btn btn-primary btn-floating m-1" style="background-color: #0082ca" href="https://www.linkedin.com/in/jhonatancarreazo" role="button"><i class="bi bi-linkedin"></i></a>
       <!-- Github -->
       <a class="btn btn-primary btn-floating m-1" style="background-color: #333333" href="https://github.com/jhonatancarreazo" role="button"><i class="bi bi-github"></i></a>
     </section>
     <!-- Section: Social media -->
-
-
-
     <!-- Section: Text -->
     <section class="mb-4">
       <p>
@@ -94,24 +86,18 @@
       </p>
     </section>
     <!-- Section: Text -->
-
-
   </div>
   <!-- Grid container -->
-
   <!-- Copyright -->
   <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
     © 2023 Copyright:
     <a class="text-dark" href="#">SoniTech Colombia.</a>
   </div>
   <!-- Copyright -->
-
 </footer>
 <!-- Footer -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous"></script>
-
-
 </body>
 </html>
