--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-
-  
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">  
 </head>
-
 <body>
   <!-- Encabezado de la página -->
   <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary nav">
       <div class="container-fluid">
-        <a class="navbar-brand" href="./"><img src="icons/download.svg" alt="SoniTech Colombia" class="logo"></a>
+        <div class="logo">
+          <a class="navbar-brand" href="./"></a>
+        </div>
+        
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -46,12 +46,8 @@
       </div>
     </nav>
   </header>
-
   <main class="container  card mt-2">
-    <div  data-aos="fade-up" class="bg-body-tertiary p-5 rounded mt-2 main__img">
-
-    </div>
-
+    <div  data-aos="fade-up" class="bg-body-tertiary p-5 rounded mt-2 main__img"></div>
     <section data-aos="zoom-in" class="main__text">
       <!-- Sección con texto principal -->
       <h1 class="main__h1">
@@ -72,9 +68,7 @@
       una interfaz elegante y fácil de usar, <b>Harmonia Pro</b> se adapta tanto a principiantes como a profesionales de
       la música.
       </p>
-
     </section>
-
     <section data-aos="zoom-in-left">
       <h2 class="main__h2">Conoce a Nuestro Equipo Apasionado de Expertos Musicales y Tecnológicos</h2>
       <p class="main__p">
@@ -89,37 +83,26 @@
         </li>
       </ul>
     </section>
-
   </main>
-
   <!-- pìe de pagina -->
-
-
   <!-- Footer -->
 <footer class=" text-center ">
   <!-- Grid container -->
   <div class="container p-4">
-
     <!-- Section: Social media -->
     <section class="mb-4">
       <!-- Facebook -->
       <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998" href="https://www.facebook.com/jcarreazo?mibextid=LQQJ4d " role="button"><i class="bi bi-facebook"></i></a>
-
       <!-- Twitter -->
       <a class="btn btn-primary btn-floating m-1" style="background-color: #55acee" href="https://twitter.com/JCA024" role="button"><i class="bi bi-twitter"></i></a>
-
       <!-- Instagram -->
       <a class="btn btn-primary btn-floating m-1" style="background-color: #ac2bac" href="#!" role="button"><i class="bi bi-instagram"></i></a>
-
       <!-- Linkedin -->
       <a class="btn btn-primary btn-floating m-1" style="background-color: #0082ca" href="https://www.linkedin.com/in/jhonatancarreazo" role="button"><i class="bi bi-linkedin"></i></a>
       <!-- Github -->
       <a class="btn btn-primary btn-floating m-1" style="background-color: #333333" href="https://github.com/jhonatancarreazo" role="button"><i class="bi bi-github"></i></a>
     </section>
     <!-- Section: Social media -->
-
-
-
     <!-- Section: Text -->
     <section class="mb-4">
       <p>
@@ -127,21 +110,16 @@
       </p>
     </section>
     <!-- Section: Text -->
-
-
   </div>
   <!-- Grid container -->
-
   <!-- Copyright -->
   <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
     © 2023 Copyright:
     <a class="text-dark" href="#">SoniTech Colombia.</a>
   </div>
   <!-- Copyright -->
-
 </footer>
 <!-- Footer -->
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous"></script>
@@ -150,5 +128,4 @@
       AOS.init();
     </script>
 </body>
-
 </html>
