--- a/pages/equipo.html
+++ b/pages/equipo.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,14 +10,14 @@
   <link rel="stylesheet" href="../css/main.css">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
-
 <body>
-
   <!-- Encabezado de la página -->
   <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary nav">
       <div class="container-fluid">
-        <a data-aos="zoom-in-left" class="navbar-brand" href="../"><img src="../icons/download.svg" alt="SoniTech Colombia" class="logo"></a>
+        <div class="logo">
+          <a class="navbar-brand" href="./"></a>
+        </div>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -46,11 +45,7 @@
     </nav>
   </header>
   <!-- Contenido principal de la página -->
-
   <main class="container mt-2">
-
-
-
     <div data-aos="zoom-in" class="card">
       <h1 class="card-title m-2">Conoce nuestro equipo</h1>
     </div>
@@ -74,9 +69,6 @@
         </div>
       </div>
     </div>
-
-
-
     <div data-aos="zoom-in" class="card">
       <div class="row no-gutters">
         <div class="col-md-4">
@@ -97,9 +89,6 @@
         </div>
       </div>
     </div>
-
-
-
     <div data-aos="zoom-in" class="card">
       <div class="row no-gutters">
         <div class="col-md-4">
@@ -120,11 +109,6 @@
         </div>
       </div>
     </div>
-
-
-
-
-
     <div data-aos="zoom-in" class="card">
       <div class="row no-gutters">
         <div class="col-md-4">
@@ -144,8 +128,6 @@
         </div>
       </div>
     </div>
-
-
     <div data-aos="zoom-in" class="card">
       <div class="row no-gutters">
         <div class="col-md-4">
@@ -165,38 +147,26 @@
         </div>
       </div>
     </div>
-
-
-
   </main>
-
   <!-- pìe de pagina -->
-
  <!-- Footer -->
  <footer class=" text-center ">
   <!-- Grid container -->
   <div class="container p-4">
-
     <!-- Section: Social media -->
     <section class="mb-4">
       <!-- Facebook -->
       <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998" href="https://www.facebook.com/jcarreazo?mibextid=LQQJ4d " role="button"><i class="bi bi-facebook"></i></a>
-
       <!-- Twitter -->
       <a class="btn btn-primary btn-floating m-1" style="background-color: #55acee" href="https://twitter.com/JCA024" role="button"><i class="bi bi-twitter"></i></a>
-
       <!-- Instagram -->
       <a class="btn btn-primary btn-floating m-1" style="background-color: #ac2bac" href="#!" role="button"><i class="bi bi-instagram"></i></a>
-
       <!-- Linkedin -->
       <a class="btn btn-primary btn-floating m-1" style="background-color: #0082ca" href="https://www.linkedin.com/in/jhonatancarreazo" role="button"><i class="bi bi-linkedin"></i></a>
       <!-- Github -->
       <a class="btn btn-primary btn-floating m-1" style="background-color: #333333" href="https://github.com/jhonatancarreazo" role="button"><i class="bi bi-github"></i></a>
     </section>
     <!-- Section: Social media -->
-
-
-
     <!-- Section: Text -->
     <section class="mb-4">
       <p>
@@ -204,29 +174,22 @@
       </p>
     </section>
     <!-- Section: Text -->
-
-
   </div>
   <!-- Grid container -->
-
   <!-- Copyright -->
   <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
     © 2023 Copyright:
     <a class="text-dark" href="#">SoniTech Colombia.</a>
   </div>
   <!-- Copyright -->
-
 </footer>
 <!-- Footer -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-
     <script>
       AOS.init();
     </script> 
-
 </body>
-
 </html>
