--- a/pages/productos.html
+++ b/pages/productos.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,15 +9,14 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 <link rel="stylesheet" href="../css/main.css">
 </head>
-
 <body>
-
-
     <!-- Encabezado de la página -->
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary nav">
           <div class="container-fluid">
-            <a class="navbar-brand" href="../"><img src="../icons/download.svg" alt="SoniTech Colombia" class="logo"></a>
+            <div class="logo">
+              <a class="navbar-brand" href="./"></a>
+            </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
               aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -41,18 +39,13 @@
                   <a class="nav-link" href="../pages/testimonios.html">Testimonios <i class="bi bi-megaphone-fill"></i></a>
                 </li>
               </ul>
-            </div>
-
-            
-
+            </div>     
           </div>
         </nav>
       </header>
-
     <main class="container mt-2">
         <section class="card">
             <h1 class="card-header">Descubre Nuestros Innovadores Productos Musicales</h1>
-
             <ul class="lista-productos">
                 <li class="card m-2">
                     <h2 class="main__h2 m-1">Harmonia Pro</h2>
@@ -88,12 +81,9 @@
                         experimentar con bucles y crear pistas emocionantes.</p>
                 </li>
             </ul>
-
             <a class="cta-productos m-5" href="#">Explora Más Productos</a>
         </section>
     </main>
-
-
    <!-- Footer -->
 <footer class=" text-center ">
   <!-- Grid container -->
@@ -103,22 +93,16 @@
     <section class="mb-4">
       <!-- Facebook -->
       <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998" href="https://www.facebook.com/jcarreazo?mibextid=LQQJ4d " role="button"><i class="bi bi-facebook"></i></a>
-
       <!-- Twitter -->
       <a class="btn btn-primary btn-floating m-1" style="background-color: #55acee" href="https://twitter.com/JCA024" role="button"><i class="bi bi-twitter"></i></a>
-
       <!-- Instagram -->
       <a class="btn btn-primary btn-floating m-1" style="background-color: #ac2bac" href="#!" role="button"><i class="bi bi-instagram"></i></a>
-
       <!-- Linkedin -->
       <a class="btn btn-primary btn-floating m-1" style="background-color: #0082ca" href="https://www.linkedin.com/in/jhonatancarreazo" role="button"><i class="bi bi-linkedin"></i></a>
       <!-- Github -->
       <a class="btn btn-primary btn-floating m-1" style="background-color: #333333" href="https://github.com/jhonatancarreazo" role="button"><i class="bi bi-github"></i></a>
     </section>
     <!-- Section: Social media -->
-
-
-
     <!-- Section: Text -->
     <section class="mb-4">
       <p>
@@ -126,24 +110,18 @@
       </p>
     </section>
     <!-- Section: Text -->
-
-
   </div>
   <!-- Grid container -->
-
   <!-- Copyright -->
   <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
     © 2023 Copyright:
     <a class="text-dark" href="#">SoniTech Colombia.</a>
   </div>
   <!-- Copyright -->
-
 </footer>
 <!-- Footer -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous"></script>
-
 </body>
-
 </html>
