correccion en el tamaño de los botones y imagen principal en vista mobil

--- a/pages/testimonios.html
+++ b/pages/testimonios.html
@@ -59,6 +59,12 @@
                 <p class="card-text m-1">BeatMakerX es la herramienta perfecta para crear ritmos en movimiento. Su interfaz intuitiva hace que la creación musical sea una experiencia divertida y fluida.</p>
                 <b class="card-title m-1">Andrés R., DJ y Productor</b>
             </div>
+            <div class="card m-2">
+              <p class="card-text m-1">He estado usando Composer's Companion durante algunos meses y puedo decir con seguridad que ha revolucionado mi proceso de composición musical. Como compositor, uno de los mayores desafíos que enfrento es encontrar inspiración y crear melodías únicas. Sin embargo, con Composer's Companion, eso ya no es un problema. La amplia biblioteca de melodías prefabricadas y progresiones de acordes me ha permitido explorar diferentes estilos musicales y experimentar con nuevas ideas sin esfuerzo. Composer's Companion no solo proporciona una amplia gama de elementos musicales, sino que también ofrece opciones de personalización que me permiten adaptar las melodías para que se ajusten perfectamente a mis composiciones. Este software realmente se ha convertido en una herramienta indispensable en mi proceso creativo. <br>
+
+                Además, estoy sorprendido por la interfaz intuitiva y el diseño fácil de usar de Composer's Companion. Aunque no soy la persona más experta en tecnología, encontré el software increíblemente fácil de navegar. La organización de la biblioteca y el etiquetado claro de los diferentes elementos musicales me facilitaron encontrar exactamente lo que necesitaba. Además, la integración del software con mi estación de trabajo de audio digital ha optimizado mi flujo de trabajo, ahorrándome tiempo y energía valiosos. Ya no tengo que pasar horas buscando la melodía adecuada o esforzándome por encontrar armonías. Composer's Companion realmente ha elevado mi experiencia en composición musical y lo recomendaría ampliamente a cualquier compositor, ya sean principiantes o profesionales experimentados.</p>
+              <b class="card-title m-1">Jorge C., DJ y Productor</b>
+          </div>
         </section>
     </main>
  <!-- Footer -->
