--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!doctype html>
 <html lang="es">
-
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>SoniTech Colombia</title>
+  <meta property="og:title" content="SoniTech Colombia" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.imdb.com/title/tt0117500/" />
+  <meta property="og:image" content="https://jhonatancarreazo.github.io/SoniTech-Colombia.github.io/icons/logo-no-background.png" />
   <link rel="stylesheet" href="css/main.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">  
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
+
 <body>
   <!-- Encabezado de la página -->
   <header>
@@ -19,7 +23,7 @@
         <div class="logo">
           <a class="navbar-brand" href="./"></a>
         </div>
-        
+
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -27,19 +31,24 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a data-aos="zoom-in-left" class="nav-link" href="#Nosotros">Nosotros <i class="bi bi-people-fill"></i></a>
+              <a data-aos="zoom-in-left" class="nav-link" href="#Nosotros">Nosotros <i
+                  class="bi bi-people-fill"></i></a>
             </li>
             <li class="nav-item">
-              <a data-aos="zoom-in-left" class="nav-link" href="pages/empleos.html">Empleos <i class="bi bi-briefcase-fill"></i></a>
+              <a data-aos="zoom-in-left" class="nav-link" href="pages/empleos.html">Empleos <i
+                  class="bi bi-briefcase-fill"></i></a>
             </li>
             <li class="nav-item">
-              <a data-aos="zoom-in-left" class="nav-link" href="pages/productos.html">Productos <i class="bi bi-boxes"></i></a>
+              <a data-aos="zoom-in-left" class="nav-link" href="pages/productos.html">Productos <i
+                  class="bi bi-boxes"></i></a>
             </li>
             <li class="nav-item">
-              <a data-aos="zoom-in-left" class="nav-link" href="pages/equipo.html">Equipo <i class="bi bi-share-fill"></i></a>
+              <a data-aos="zoom-in-left" class="nav-link" href="pages/equipo.html">Equipo <i
+                  class="bi bi-share-fill"></i></a>
             </li>
             <li class="nav-item">
-              <a data-aos="zoom-in-left" class="nav-link" href="pages/testimonios.html">Testimonios <i class="bi bi-megaphone-fill"></i></a>
+              <a data-aos="zoom-in-left" class="nav-link" href="pages/testimonios.html">Testimonios <i
+                  class="bi bi-megaphone-fill"></i></a>
             </li>
           </ul>
         </div>
@@ -47,7 +56,7 @@
     </nav>
   </header>
   <main class="container  card mt-2">
-    <div  data-aos="fade-up" class="bg-body-tertiary p-5 rounded mt-2 main__img"></div>
+    <div data-aos="fade-up" class="bg-body-tertiary p-5 rounded mt-2 main__img"></div>
     <section data-aos="zoom-in" class="main__text">
       <!-- Sección con texto principal -->
       <h1 class="main__h1">
@@ -86,46 +95,55 @@
   </main>
   <!-- pìe de pagina -->
   <!-- Footer -->
-<footer class=" text-center ">
-  <!-- Grid container -->
-  <div class="container p-4">
-    <!-- Section: Social media -->
-    <section class="mb-4">
-      <!-- Facebook -->
-      <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998" href="https://www.facebook.com/jcarreazo?mibextid=LQQJ4d " role="button"><i class="bi bi-facebook"></i></a>
-      <!-- Twitter -->
-      <a class="btn btn-primary btn-floating m-1" style="background-color: #55acee" href="https://twitter.com/JCA024" role="button"><i class="bi bi-twitter"></i></a>
-      <!-- Instagram -->
-      <a class="btn btn-primary btn-floating m-1" style="background-color: #ac2bac" href="#!" role="button"><i class="bi bi-instagram"></i></a>
-      <!-- Linkedin -->
-      <a class="btn btn-primary btn-floating m-1" style="background-color: #0082ca" href="https://www.linkedin.com/in/jhonatancarreazo" role="button"><i class="bi bi-linkedin"></i></a>
-      <!-- Github -->
-      <a class="btn btn-primary btn-floating m-1" style="background-color: #333333" href="https://github.com/jhonatancarreazo" role="button"><i class="bi bi-github"></i></a>
-    </section>
-    <!-- Section: Social media -->
-    <!-- Section: Text -->
-    <section class="mb-4">
-      <p>
-        Todos los derechos de autor del software musical y contenido relacionado pertenecen a SoniTech Colombia. Queda estrictamente prohibida la reproducción, distribución o uso no autorizado de cualquier parte de este programa sin el consentimiento expreso de SoniTech Colombia. Para obtener más información o reportar infracciones, por favor contáctenos en nuestra página web oficial.
-      </p>
-    </section>
-    <!-- Section: Text -->
-  </div>
-  <!-- Grid container -->
-  <!-- Copyright -->
-  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
-    © 2023 Copyright:
-    <a class="text-dark" href="#">SoniTech Colombia.</a>
-  </div>
-  <!-- Copyright -->
-</footer>
-<!-- Footer -->
+  <footer class=" text-center ">
+    <!-- Grid container -->
+    <div class="container p-4">
+      <!-- Section: Social media -->
+      <section class="mb-4">
+        <!-- Facebook -->
+        <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998"
+          href="https://www.facebook.com/jcarreazo?mibextid=LQQJ4d " role="button"><i class="bi bi-facebook"></i></a>
+        <!-- Twitter -->
+        <a class="btn btn-primary btn-floating m-1" style="background-color: #55acee" href="https://twitter.com/JCA024"
+          role="button"><i class="bi bi-twitter"></i></a>
+        <!-- Instagram -->
+        <a class="btn btn-primary btn-floating m-1" style="background-color: #ac2bac" href="#!" role="button"><i
+            class="bi bi-instagram"></i></a>
+        <!-- Linkedin -->
+        <a class="btn btn-primary btn-floating m-1" style="background-color: #0082ca"
+          href="https://www.linkedin.com/in/jhonatancarreazo" role="button"><i class="bi bi-linkedin"></i></a>
+        <!-- Github -->
+        <a class="btn btn-primary btn-floating m-1" style="background-color: #333333"
+          href="https://github.com/jhonatancarreazo" role="button"><i class="bi bi-github"></i></a>
+      </section>
+      <!-- Section: Social media -->
+      <!-- Section: Text -->
+      <section class="mb-4">
+        <p>
+          Todos los derechos de autor del software musical y contenido relacionado pertenecen a SoniTech Colombia. Queda
+          estrictamente prohibida la reproducción, distribución o uso no autorizado de cualquier parte de este programa
+          sin el consentimiento expreso de SoniTech Colombia. Para obtener más información o reportar infracciones, por
+          favor contáctenos en nuestra página web oficial.
+        </p>
+      </section>
+      <!-- Section: Text -->
+    </div>
+    <!-- Grid container -->
+    <!-- Copyright -->
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+      © 2023 Copyright:
+      <a class="text-dark" href="#">SoniTech Colombia.</a>
+    </div>
+    <!-- Copyright -->
+  </footer>
+  <!-- Footer -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-      AOS.init();
-    </script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
+
 </html>
