corrijo de la url og:url por https://jhonatancarreazo.github.io/SoniTech-Colombia.github.io/

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>SoniTech Colombia</title>
   <meta property="og:title" content="SoniTech Colombia" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://www.imdb.com/title/tt0117500/" />
+  <meta property="og:url" content="https://jhonatancarreazo.github.io/SoniTech-Colombia.github.io/"/>
   <meta property="og:image" content="https://jhonatancarreazo.github.io/SoniTech-Colombia.github.io/icons/logo-no-background.png" />
   <link rel="stylesheet" href="css/main.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
