--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>SoniTech Colombia</title>
+  <meta name="description" content="SoniTech Colombia es una empresa colombiana líder en software musical, dedicada a la creación, producción y distribución de software de producción e interpretación musical de vanguardia.">
   <meta property="og:title" content="SoniTech Colombia" />
-  <meta property="og:type" content="website" />
+  <meta property="og:description" content="SoniTech Colombia es una empresa colombiana líder en software musical, dedicada a la creación, producción y distribución de software de producción e interpretación musical de vanguardia."/>
   <meta property="og:url" content="https://jhonatancarreazo.github.io/SoniTech-Colombia.github.io/"/>
   <meta property="og:image" content="https://jhonatancarreazo.github.io/SoniTech-Colombia.github.io/icons/logo-no-background.png" />
+  <meta name="keywords" content="SoniTech Colombia, software musical, producción musical, interpretación musical, Bogotá">
+  <meta name="author" content="Jhonatan Carreazo">
+  <meta name="robots" content="index, follow">
+  <meta name="revisit-after" content="3 days">
+  <meta name="language" content="Spanish">
   <link rel="stylesheet" href="css/main.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
